<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.menu.profil.ProfilFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_picture"
        android:layout_marginTop="24dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="100dp">

        <ImageView
            android:id="@+id/imageView_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/person_icon" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nathan\nNowakowski"
        android:padding="@dimen/horizontal_margin"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_my_information"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/fragmentOrders" />

    <TextView
        android:id="@+id/title_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_my_email"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_information"
        app:layout_constraintBottom_toBottomOf="@+id/user_email"/>

    <EditText
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/top_margin"
        app:layout_constraintStart_toEndOf="@id/title_email"
        app:layout_constraintTop_toBottomOf="@+id/user_information"
        tools:text="nathan@gmail.com"/>

    <TextView
        android:id="@+id/title_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_my_address"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email"
        app:layout_constraintBottom_toBottomOf="@+id/user_address"/>

    <EditText
        android:id="@+id/user_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/title_address"
        app:layout_constraintTop_toBottomOf="@+id/user_email"
        tools:text="567 Plaza España, Cordoba"/>

    <TextView
        android:id="@+id/title_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_my_phone"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_address"
        app:layout_constraintBottom_toBottomOf="@+id/user_phone"/>

    <EditText
        android:id="@+id/user_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        tools:text=" +54 667 44 555 34"
        app:layout_constraintStart_toEndOf="@id/title_phone"
        app:layout_constraintTop_toBottomOf="@+id/user_address" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentOrders"
        android:name="com.example.onlinepurchase.activity.fragments.OrderListFragment"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="@dimen/top_margin"
        app:layout_constraintBottom_toTopOf="@+id/user_information"
        app:layout_constraintTop_toBottomOf="@+id/title_profil" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_my_orders"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/top_margin"
        app:layout_constraintBottom_toTopOf="@+id/fragmentOrders"
        app:layout_constraintTop_toBottomOf="@+id/title_profil" />

    <TextView
        android:id="@+id/title_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/title_customization"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/user_phone" />

    <TextView
        android:id="@+id/title_category_disposition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/title_category_disposition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_settings" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/top_margin"
        app:layout_constraintStart_toEndOf="@id/title_category_disposition"
        app:layout_constraintTop_toBottomOf="@+id/title_settings" />

    <TextView
        android:id="@+id/title_product_disposition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/title_product_disposition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_category_disposition" />

    <Spinner
        android:id="@+id/productSpinner"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/top_margin"
        app:layout_constraintStart_toEndOf="@id/title_product_disposition"
        app:layout_constraintTop_toBottomOf="@+id/title_category_disposition" />

    <Button
        android:id="@+id/action_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/top_margin"
        android:text="Disconnect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>